--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/W9-assignment-template/FileContentIndex
+/.vs/W9-assignment-template/copilot-chat/a048e36f/sessions
+/.vs/W9-assignment-template/CopilotIndices/17.13.444.19527
